--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+     "node": "23.1.0",
     "start": "node server.js",
       "server": "nodemon server.js",
       "client": "npm start --prefix client",
