--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "postinstall": "chmod +x ./node_modules/.bin/vite",
+  "build": "vite build",
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "clientinstall": "npm install --prefix client",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
+      "server": "nodemon server.js",
+      "client": "npm start --prefix client",
+      "clientinstall": "npm install --prefix client",
+      
+      "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -28,10 +30,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.11"
-  },
-  "engines": {
-    "node": "23.1.0"
-}
-
+    "vite": "^5.4.1"
+  }
 }
